fix homepage macbook size on mobile

--- a/src/scss/templates/_home.scss
+++ b/src/scss/templates/_home.scss
@@ -25,8 +25,11 @@
 
 .macbook {
   padding: 0;
-  margin: 0 auto;
+  margin: 20px auto 60px;
   max-width: 800px;
+  @media (min-width: $tablet) {
+    margin: 0 auto;
+  }
 }
 
 .macbook__screen {
